--- a/styles2.css
+++ b/styles2.css
@@ -5,8 +5,8 @@
 }
 html {
     font-family: Inter, Arial, sans-serif; 
-    font-size: 16px;
-    line-height: 1,45;
+    font-size: 10px;
+    line-height: 1,65;
 }
 
 body {
@@ -63,29 +63,30 @@ color: #7e93ab;
 .container {
    display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: stretch;
   min-height: 100vh;
   gap: 5%;
 padding: 0 4%;
+    padding-bottom: 40%;
 }
 
 
 .left-block {
 flex: 1;
-min-height: 80vh;
+
 display: flex;
 flex-direction: column;
 background-color: #fbe9e4;
 padding: 20px 5px 5px 5px;
-margin-top: 70px;
+margin-top: 60px;
 margin-left: 1%;
 min-width: 150px;
-gap: 5px;
+gap: 3px;
 }
 
 .left-block h1 {
     font-family: "Cormorant Garamond, serif";
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: normal;
     padding-left: 10%;
     padding-top: 5%;
@@ -121,6 +122,7 @@ display: flex;
 flex-direction: column;
 }
 .li {
+    list-style: none;
 display: flex;
 align-items: center;
 margin-bottom: 10px;
@@ -152,7 +154,7 @@ padding-top: 10%;
     display: inline-block;
     border: 1px solid #7fbf7f;
     border-radius: 50%;
-    padding: 10%;
+    padding: 8%;
    
     width: 32vw;
     height: 12vw;
@@ -174,14 +176,14 @@ display: flex;
 justify-content: flex-start;
 align-items: center;
 padding: 10px 5px 10px 5px;
-margin-top: 30px;
+margin-top: 61px;
 margin-right: 1%;
 margin-left: 1%;
 flex-direction: column;
 background-color: #fbe9e4;
 min-width: 150px;
 min-height: 80vh;
-gap: 40px;
+gap: 30px;
 
 
 }
@@ -212,14 +214,17 @@ gap: 40px;
     
 border: 1px solid #7fbf7f;
 
-padding: 20px;
-margin-left: 5px;
-margin-right: 5px;
+padding: 10px;
+margin-left: 20px;
+margin-right: 20px;
 }
 .about-block p {
 line-height: 1,5;
 
 }
 
+.contacts {
+    margin-bottom: 7px;
+}
 
 
