--- a/styles2.css
+++ b/styles2.css
@@ -79,8 +79,8 @@ color: #7e93ab;
   justify-content: space-between;
   align-items: stretch;
   min-height: 100vh;
-  gap: 5%;
-padding: 0 4%;
+  gap: 4%;
+padding: 0 3%;
     padding-bottom: 40%;
 }
 
@@ -111,7 +111,7 @@ gap: 3px;
 .name {
  padding-top: 2%;  
 font-style: italic;
-font-weight: 100;
+font-weight: 100px;
 display: flex;
 flex-direction: column;
 text-align: center;
@@ -245,6 +245,7 @@ line-height: 1,5;
 .contacts {
     margin-bottom: 7px;
 }
+
 
 
 
