--- a/styles2.css
+++ b/styles2.css
@@ -75,13 +75,13 @@ transition: color 0.3s;
 }
 
 .container {
-   display: flex;
+  display: flex;
   justify-content: space-between;
   align-items: stretch;
   min-height: 100vh;
-  gap: 4%;
-padding: 0 3%;
-    padding-bottom: 10%;
+  gap: 10px;
+  padding: 0 3%;
+  padding-bottom: 10%;
 }
 
 
@@ -94,7 +94,7 @@ background-color: #fff8e1;
 padding: 20px 5px 5px 5px;
 margin-top: 60px;
 margin-left: 1%;
-gap: 3px;
+gap: 2%;
 }
 
 .left-block h1 {
@@ -128,7 +128,7 @@ margin: 10px auto 0 auto;
     display: flex;
    text-align: center;
     margin: 0 auto;
-  padding-top: 7%;
+  padding-top: 10%;
 }
 
 }
@@ -187,12 +187,12 @@ padding-top: 10%;
 }
 
 .contacts {
-  padding-bottom: 20%;
+ display: flex;
+  flex-direction: column;
+  justify-content: flex-end; 
+  margin-top: 50%;
 }
-.button-container {
-    text-align: center;
-    padding-top: 20%;
-}
+
 
 .right-block {
 flex: 1;
@@ -206,7 +206,7 @@ margin-left: 1%;
 flex-direction: column;
 background-color: #fff8e1;
 min-width: 150px;
-gap: 30px;
+gap: 40px;
 }
 
 .photo-block {
@@ -252,10 +252,11 @@ line-height: 1,5;
 .socials a {
     color: inherit;
     text-decoration: none;
- color: #333333;
+ color: #254c36;
  font-size: clamp(1rem, 2vw, 2rem);
-
+font-weight: normal;
 }
+
 
 
 
