--- a/styles2.css
+++ b/styles2.css
@@ -94,6 +94,7 @@ background-color: #fff8e1;
 padding: 20px 5px 5px 5px;
 margin-top: 60px;
 margin-left: 1%;
+margin-right: 1%;   
 gap: 2%;
 }
 
@@ -133,8 +134,9 @@ margin: 10px auto 0 auto;
 
 }
 .list-wrapper {
+    list-style: none;
 max-width: 300px;
-overflow-x: auto;
+overflow-x: hidden;
     margin-top: 5%;
 }
 .ul {
@@ -256,6 +258,7 @@ line-height: 1,5;
  font-size: clamp(1rem, 2vw, 2rem);
 font-weight: normal;
 }
+
 
 
 
