--- a/styles2.css
+++ b/styles2.css
@@ -91,7 +91,7 @@ align-items: center;
 display: flex;
 flex-direction: column;
 background-color: #fff8e1;
-padding: 20px 5px 5px 5px;
+padding: 5px 5px 5px 5px;
 margin-top: 60px;
 margin-left: 1%;
 margin-right: 1%;   
@@ -127,39 +127,26 @@ margin: 10px auto 0 auto;
 
 .help-block {
     display: flex;
+    flex-direction: column;
    text-align: center;
     margin: 0 auto;
   padding-top: 10%;
+    gap: 2rem;
 }
 
-}
-.list-wrapper {
-   max-width: 300px;
-overflow-x: auto;
-    margin-top: 5%;
-}
-.ul {
-list-style-type: none;
-margin: 0;
+help-block ul {
+list-style-type: disc; 
+padding-left: 2rem;
 display: flex;
 flex-direction: column;
+gap: 1rem;
+list-style-position: outside;
 }
-.li {
-    list-style: none;
-display: flex;
-align-items: center;
-margin-bottom: 10px;
-}
-.checkbox {
-  line-height: 2;
-margin-right: 10px;
-padding-left: 10px;
-color: #254c36;
-}
-.list-item-text {
-flex-grow: 1;
-word-break: break-word;
-border-radius: 50%;
+.help-block li {
+    margin: 0;
+    text-align: left;
+    line-height: 2;
+    font-size: clamp(1rem, 2vw, 2rem);
 }
 
 .services {
@@ -188,12 +175,33 @@ padding-top: 10%;
 }
 
 .contacts {
- display: flex;
-  flex-direction: column;
-  justify-content: flex-end; 
-  margin-top: 50%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30%;
+    margin-top: 1rem;
+    padding-bottom: 20px;
+    align-self: flex-start;
+    text-align: left;
+    padding-left: 20px;
 }
-
+.contacts span {
+    display: flex;
+    flex-direction: column;
+   justify-content: space-between;
+    font-size: 1rem;
+}
+.contacts a {
+    font-size: 1rem;
+    color: #2c5c7e;
+    text-decoration: none;
+    transition: color 0,3s;
+   
+}
+ .contacts a:hover {
+        color: #1b4d3a;
+        text-decoration: underline;
+    }
+    
 
 .right-block {
 flex: 1;
@@ -245,11 +253,21 @@ line-height: 1,5;
 
 .socials {
    display: flex;
-   flex-direction: row;
-   gap: 4rem;
-    align-items: center;
-   padding-top: 10%;
-}
+   flex-direction: column;
+   gap: 2rem;
+   align-items: center;
+   width: fit-content;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  }
+  .social-link {
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 8px 12px;
+background-color: #d9e3d859;
+width: 100%;
+ }
 .socials a {
     color: inherit;
     text-decoration: none;
@@ -257,6 +275,9 @@ line-height: 1,5;
  font-size: clamp(1rem, 2vw, 2rem);
 font-weight: normal;
 }
+
+
+
 
 
 
