--- a/styles2.css
+++ b/styles2.css
@@ -80,7 +80,8 @@ transition: color 0.3s;
   align-items: stretch;
   min-height: 100vh;
   gap: 10px;
-  padding: 0 3%;
+  padding: 0 1rem;
+    box-sizing: border-box;
   padding-bottom: 10%;
 }
 
@@ -91,7 +92,7 @@ align-items: center;
 display: flex;
 flex-direction: column;
 background-color: #fff8e1;
-padding: 5px 5px 5px 5px;
+padding: 1rem;
 margin-top: 60px;
 margin-left: 1%;
 margin-right: 1%;   
@@ -140,7 +141,8 @@ padding-left: 2rem;
 display: flex;
 flex-direction: column;
 gap: 1rem;
-list-style-position: outside;
+list-style-position: inside;
+    margin-left: 0;
 }
 .help-block li {
     margin: 0;
@@ -275,6 +277,7 @@ width: 100%;
  font-size: clamp(1rem, 2vw, 2rem);
 font-weight: normal;
 }
+
 
 
 
